--- a/react-docker/Dockerfile
+++ b/react-docker/Dockerfile
@@ -1,28 +1,28 @@
 # set the base image to create the image for our react app
 FROM node:20-alpine
 
-# create a user with permissions to run the app
+# create a dedicated 'app' group and an 'app' user with permissions to run the app
 # This is done to avoid running the app as root
 # If the app is run as root, any vulnerability in the app can be exploited to gain access to the host system
-# It's a good practice to run the app as a non-root user
 RUN addgroup -S app && adduser -S -g app app
 
 # set the working directory to /app
 WORKDIR /app
 
 # copy package.json and package-lock.json to the working directory 
-# & ensure the copied files are owned by the app user
-COPY --chown=app:app package*.json ./
+COPY package*.json ./
 
-# set the user to use when running the image and also when installing the dependencies
+# change the ownership of the application files to the app user
+RUN chown -R app:app /app
+
+# set the user to run the app
 USER app
 
 # install dependencies
 RUN npm install
 
 # copy the rest of the application files to the working directory 
-# & ensure the copied files are owned by the app user
-COPY --chown=app:app . .
+COPY . .
 
 # expose port 5173 to tell Docker that the container listens on the specified network ports at runtime
 EXPOSE 5173
