--- a/vite-project/Dockerfile
+++ b/vite-project/Dockerfile
@@ -10,16 +10,14 @@ ARG NODE_VERSION=22.14.0
 
 FROM node:${NODE_VERSION}-alpine
 
-# Use production node environment by default.
+# Use production node environment by default (cf. compose.yaml).
 ENV NODE_ENV production
-
 
 WORKDIR /usr/src/app
 
 # Download dependencies as a separate step to take advantage of Docker's caching.
 # Leverage a cache mount to /root/.npm to speed up subsequent builds.
-# Leverage a bind mounts to package.json and package-lock.json to avoid having to copy them into
-# into this layer.
+# Leverage bind mounts to package.json and package-lock.json to avoid copying them into the image layer.
 RUN --mount=type=bind,source=package.json,target=package.json \
     --mount=type=bind,source=package-lock.json,target=package-lock.json \
     --mount=type=cache,target=/root/.npm \
