@58 preparing Docker related files in our MERN project

--- a/react-docker/Dockerfile
+++ b/react-docker/Dockerfile
@@ -3,7 +3,7 @@ FROM node:20-alpine
 
 # create a dedicated 'app' group and an 'app' user with permissions to run the app
 # This is done to avoid running the app as root
-# If the app is run as root, any vulnerability in the app can be exploited to gain access to the host system
+# If the app is run as root, any vulnerability can be exploited to gain access to the host system
 RUN addgroup -S app && adduser -S -g app app
 
 # set the working directory to /app
@@ -24,7 +24,7 @@ RUN npm install
 # copy the rest of the application files to the working directory 
 COPY . .
 
-# expose port 5173 to tell Docker that the container listens on the specified network ports at runtime
+# tell Docker that the container listens on the specified network ports at runtime
 EXPOSE 5173
 
 # command to run the app
